--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2"
+  },
+  "scripts": {
+    "start": "node default.js"
   }
 }
