--- a/CONFIG/config.yml
+++ b/CONFIG/config.yml
@@ -25,16 +25,8 @@ voice:
 status:
   delay: 2000 # default (Minimum 4000)
   data:
-    - emoji: "🧡"
-      text: "TEXT 1"
-    - emoji: "💛"
-      text: "TEXT 2"
-    - emoji: "💚"
-      text: "TEXT 3"
-    - emoji: "💙"
-      text: "TEXT 4"
-    - emoji: "💜"
-      text: "TEXT 5"
+    - emoji: ""
+      text: ""
 
 
 rpc:
