--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "colors": "^1.4.0",
     "discord.js-selfbot-v13": "^3.7.0",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "js-yaml": "^4.1.0",
     "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
